samples/_failures_safe/1761507017_f741e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edd23a84.c: In function ‘main’:
./samples/SAFE/__tmp_edd23a84.c:194:9: error: expected expression at end of input
  194 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_edd23a84.c:194:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edd23a84.c:194:9: error: expected declaration or statement at end of input
